# szs_time_sync

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
custom_timekeeper/: CMakeLists.txt  CustomTimeKeeperConfig.h.in  main.cpp
custom_timekeeper/src/Final/: syncMaster.cpp  syncMaster.h  syncSlave.cpp  syncSlave.h  timeKeeper.cpp
custom_timekeeper/tests/: test_pigpio.cpp  test_pigpio.h
include/: syncMaster.h  syncSlave.h  timeKeeper.h
src/: syncMaster.cpp  syncSlave.cpp  timeKeeper.cpp
tests/: CMakeLists.txt
tests/test_custom_timekeeper/: CMakeLists.txt  main.cpp
tests/test_master_timekeeper/: CMakeLists.txt  test_master_timekeeper.cpp
tests/test_project/: CMakeLists.txt  test_project.cpp
tests/test_slave_timekeeper/: CMakeLists.txt  test_slave_timekeeper.cpp
tests/test_sync_master/: CMakeLists.txt  master.cpp
tests/test_sync_slave/: CMakeLists.txt  test_slave.cpp
